tests/requests/snapshots/can_list_chapters@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: chapters
---
[
    Object {
        "book_id": Number(1),
        "created_at": String("2025-10-08T15:50:30Z"),
        "description": String("First chapter"),
        "id": Number(1),
        "level": Number(0),
        "media_count": Number(0),
        "parent_id": Null,
        "path": String("1"),
        "sort_order": Number(1),
        "title": String("Chapter 1"),
        "updated_at": String("2025-10-08T15:50:30.958625Z"),
    },
    Object {
        "book_id": Number(1),
        "created_at": String("2025-10-08T15:50:30Z"),
        "description": String("Second chapter"),
        "id": Number(2),
        "level": Number(0),
        "media_count": Number(0),
        "parent_id": Null,
        "path": String("2"),
        "sort_order": Number(2),
        "title": String("Chapter 2"),
        "updated_at": String("2025-10-08T15:50:30.962648Z"),
    },
    Object {
        "book_id": Number(1),
        "created_at": String("2025-10-08T15:50:30Z"),
        "description": Null,
        "id": Number(3),
        "level": Number(0),
        "media_count": Number(0),
        "parent_id": Null,
        "path": String("3"),
        "sort_order": Number(3),
        "title": String("Chapter 3"),
        "updated_at": String("2025-10-08T15:50:30.966904Z"),
    },
]
