tests/requests/snapshots/can_move_chapter_down@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: moved_chapter
---
Object {
    "book_id": Number(1),
    "created_at": String("2025-10-09T07:42:44Z"),
    "description": Null,
    "id": Number(1),
    "level": Number(0),
    "media_count": Number(0),
    "parent_id": Null,
    "path": String("1"),
    "sort_order": Number(2),
    "title": String("Chapter 1"),
    "updated_at": String("2025-10-09T07:42:44.806482Z"),
}
