tests/requests/snapshots/can_move_chapter_to_root@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: moved_chapter
---
Object {
    "book_id": Number(1),
    "created_at": String("2025-10-10T18:52:59Z"),
    "description": Null,
    "id": Number(2),
    "level": Number(0),
    "media_count": Number(0),
    "parent_id": Null,
    "path": String("2"),
    "sort_order": Number(10),
    "title": String("Child Chapter"),
    "updated_at": String("2025-10-10T18:52:59.977690Z"),
}
