tests/requests/snapshots/can_move_chapter_up@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: moved_chapter
---
Object {
    "book_id": Number(1),
    "created_at": String("2025-10-11T16:51:02Z"),
    "description": Null,
    "id": Number(2),
    "level": Number(0),
    "media_count": Number(0),
    "parent_id": Null,
    "path": String("2"),
    "sort_order": Number(1),
    "title": String("Chapter 2"),
    "updated_at": String("2025-10-11T16:51:02.980613Z"),
}
