tests/requests/snapshots/can_reorder_book@books_request.snap
---
source: tests/requests/books.rs
expression: response.text()
---
"{\"id\":1,\"title\":\"Book to Reorder\",\"description\":null,\"cover_image\":null,\"parent_id\":null,\"sort_order\":10,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-08T05:54:45Z\",\"updated_at\":\"2025-10-08T05:54:45.392141Z\"}"
