tests/requests/snapshots/can_reorder_chapter@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: reordered_chapter
---
Object {
    "book_id": Number(1),
    "created_at": String("2025-10-10T15:48:29Z"),
    "description": Null,
    "id": Number(1),
    "level": Number(0),
    "media_count": Number(0),
    "parent_id": Null,
    "path": String("1"),
    "sort_order": Number(5),
    "title": String("Chapter to Reorder"),
    "updated_at": String("2025-10-10T15:48:29.474737Z"),
}
