tests/requests/snapshots/can_search_books@books_request.snap
---
source: tests/requests/books.rs
expression: response.text()
---
"[{\"id\":1,\"title\":\"Rust 编程\",\"description\":\"学习 Rust\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-08T07:56:51Z\",\"updated_at\":\"2025-10-08T07:56:51Z\"},{\"id\":3,\"title\":\"Rust 高级\",\"description\":\"深入 Rust\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-08T07:56:51Z\",\"updated_at\":\"2025-10-08T07:56:51Z\"}]"
